# cloud-provider-mdns

./: README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: build.yml  ci.yml
src/ci/: __init__.py
src/cloud_provider_local/: __init__.py  base.py  cli.py  watchers.py
src/cloud_provider_mdns/: __init__.py  base.py  cli.py  nameservers.py  registries.py  registry.py  watchers.py
src/k8s_gateway_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/k8s_gateway_api/api/: __init__.py  gateway_networking_v1_api.py
src/k8s_gateway_api/models/: __init__.py  io_k8s_apimachinery_pkg_apis_meta_v1_delete_options.py  io_k8s_apimachinery_pkg_apis_meta_v1_list_meta.py  io_k8s_apimachinery_pkg_apis_meta_v1_managed_fields_entry.py  io_k8s_apimachinery_pkg_apis_meta_v1_object_meta.py  io_k8s_apimachinery_pkg_apis_meta_v1_owner_reference.py  io_k8s_apimachinery_pkg_apis_meta_v1_preconditions.py  io_k8s_apimachinery_pkg_apis_meta_v1_status.py  io_k8s_apimachinery_pkg_apis_meta_v1_status_cause.py  io_k8s_apimachinery_pkg_apis_meta_v1_status_details.py  io_k8s_networking_gateway_v1_gateway.py  io_k8s_networking_gateway_v1_gateway_class.py  io_k8s_networking_gateway_v1_gateway_class_list.py  io_k8s_networking_gateway_v1_gateway_class_spec.py  io_k8s_networking_gateway_v1_gateway_class_spec_parameters_ref.py  io_k8s_networking_gateway_v1_gateway_class_status.py  io_k8s_networking_gateway_v1_gateway_list.py  io_k8s_networking_gateway_v1_gateway_spec.py  io_k8s_networking_gateway_v1_gateway_spec_addresses_inner.py  io_k8s_networking_gateway_v1_gateway_spec_addresses_inner_one_of.py  io_k8s_networking_gateway_v1_gateway_spec_addresses_inner_one_of1.py  io_k8s_networking_gateway_v1_gateway_spec_infrastructure.py  io_k8s_networking_gateway_v1_gateway_spec_infrastructure_parameters_ref.py  io_k8s_networking_gateway_v1_gateway_spec_listeners_inner.py  io_k8s_networking_gateway_v1_gateway_spec_listeners_inner_allowed_routes.py  io_k8s_networking_gateway_v1_gateway_spec_listeners_inner_allowed_routes_kinds_inner.py  io_k8s_networking_gateway_v1_gateway_spec_listeners_inner_allowed_routes_namespaces.py  io_k8s_networking_gateway_v1_gateway_spec_listeners_inner_allowed_routes_namespaces_selector.py  io_k8s_networking_gateway_v1_gateway_spec_listeners_inner_allowed_routes_namespaces_selector_match_expressions_inner.py  io_k8s_networking_gateway_v1_gateway_spec_listeners_inner_tls.py  io_k8s_networking_gateway_v1_gateway_spec_listeners_inner_tls_certificate_refs_inner.py  io_k8s_networking_gateway_v1_gateway_status.py  io_k8s_networking_gateway_v1_gateway_status_addresses_inner.py  io_k8s_networking_gateway_v1_gateway_status_listeners_inner.py  io_k8s_networking_gateway_v1_grpc_route.py  io_k8s_networking_gateway_v1_grpc_route_list.py  io_k8s_networking_gateway_v1_grpc_route_spec.py  io_k8s_networking_gateway_v1_grpc_route_spec_parent_refs_inner.py  io_k8s_networking_gateway_v1_grpc_route_spec_rules_inner.py  io_k8s_networking_gateway_v1_grpc_route_spec_rules_inner_backend_refs_inner.py  (+31 more)
tests/: conftest.py  kubernetes_mock.py  test_gateway_api.py  test_registry.py
