[build-system]
requires = [
    'setuptools==80.9.0',
    'build==1.3.0',
    'wheel==0.45.1'
]
build-backend = 'setuptools.build_meta'

[project]
name = "cloud-provider-mdns"
description = "A cloud provider to register services exposed by your cluster in Multicast DNS"
urls = { "Sources" = "https://github.com/MrMatAP/cloud-provider-mdns" }
keywords = ["kubernetes", "mdns"]
readme = "README.md"
license = "MIT"
authors = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
maintainers = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "rich==14.2.0",
    "requests==2.32.5",
    "kubernetes-asyncio==33.3.0",
    "pyyaml==6.0.3",
    "zeroconf==0.148.0",
    "pydantic==2.12.2",
    "pydantic-settings==2.11.0",
    "dnspython==2.8.0",
    "pytest-coverage>=0.0",
    "types-pyyaml==6.0.12.20250915",
    "setuptools==80.9.0",
    "build==1.3.0",
    "wheel==0.45.1",
]
[dependency-groups]
dev = [
    "mypy==1.18.2",
    "types-PyYAML==6.0.12.20250915",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-mock==3.15.1",
    "black>=25.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloud_provider_mdns*"]
namespaces = true

[tool.setuptools.package-data]
"*" = [".mo", "*.yml", "*.yaml", "*.md", "inventory", "*.j2", "*.html", "*.ico", "*.css", "*.js", "*.svg", "*.woff", "*.eot", "*.ttf"]

[project.scripts]
cloud-provider-mdns = "cloud_provider_mdns.cli:run"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src/cloud_provider_mdns --cov-branch --cov-report=term --cov-report=xml:build/coverage.xml --junit-xml=build/junit.xml"
testpaths = ["tests"]
junit_family = "xunit2"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
asyncio_default_fixture_loop_scope = 'session'

[tool.mypy]
plugins = [ 'pydantic.mypy' ]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.black]
line-length = 80
target-version = ['py313']
